--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   }
 }
